# XDAQ-Neuropixels

./: CMakeLists.txt  conanfile.txt
.github/workflows/: build-installer.yml  build-zipVer.yml  build.yml  publish.yml
Source/: NeuropixComponents.cpp  NeuropixComponents.h  NeuropixThread.cpp
Source/Basestations/: XDAQ.cpp
Source/Formats/: IMRO.h
Source/Probes/: CustomPassiveProbe.cpp  Neuropixels1.cpp  Neuropixels2.cpp  NeuropixelsOpto.cpp  Neuropixels_NHP_Active.cpp  Neuropixels_NHP_Passive.cpp  Neuropixels_QuadBase.cpp  Neuropixels_UHD.cpp
Source/UI/: NeuropixInterface.cpp
